# birdtalk

./: .env.example  .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  __assets_head.html  analysis_options.yaml  birdtalk-app.wasm  birdtalk.wasm  favicon.ico.br  heading.webp.br  index.html  input.css  justfile  package-lock.json  pubspec.yaml  static_logo_transparent.png.br  tailwind.config.js  tailwind.css  tailwind.css.br
.github/workflows/: ci.yml  production.yml  staging.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/birdtalk/: MainActivity.kt
app/: .gitignore  Cargo.toml  Dioxus.toml  build.rs  input.css  package-lock.json  package.json  tailwind.config.js
app/src/: bird.rs  conf.rs  main.rs  pack.rs  stats.rs  supabase.rs  sync.rs  utils.rs
app/src/supabase/: auth.rs  db.rs  mod.rs  storage.rs
app/src/ui/: mod.rs
app/src/ui/components/: auth.rs  bird.rs  birdpack.rs  header.rs  icons.rs  mod.rs  modal.rs  navlink.rs
app/src/ui/game/: audio.rs  card.rs  game_over.rs  mod.rs  quiz.rs
app/src/ui/pages/: birds.rs  index.rs  listen.rs  mod.rs  play.rs  settings.rs
assets/dioxus/: birdtalk.js  birdtalk.js.br  birdtalk_bg.wasm  birdtalk_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-2a9fdcda6a4621ea/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-interpreter-js-9ac3b5e174d5b843/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-web-428bb77e57c9f35d/: inline0.js
assets/dioxus/snippets/dioxus-web-90b865b1369c74f4/: inline2.js.br
birds/: index.html
data/: Cargo.toml
data/seed/: birds.json  courses.json  packs.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/main_menu/: main_menu_screen.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: app.json  package-lock.json  package.json
native/android/: settings.gradle
native/android/app/: build.gradle
native/android/app/src/main/: AndroidManifest.xml
native/android/app/src/main/java/com/slipperysam/birdtalk/: MainActivity.kt  MainApplication.kt
native/android/app/src/main/res/values/: strings.xml
native/app/: +html.tsx
native/app-example/(tabs)/: index.tsx
native/app/(tabs)/: _layout.tsx  index.tsx
play/: index.html
src/: bird.rs  main.rs  stats.rs
src/game/: level.rs  mod.rs  quiz.rs
src/ui/: db.rs  mod.rs
src/ui/components/: modal.rs
src/ui/game/: audio.rs  card.rs  game_over.rs  mod.rs  modal.rs  quiz.rs
src/ui/pages/: achievements.rs  mod.rs
supabase/: config.toml  seed.sql
supabase/migrations/: 20240629194024_birds.sql  20240715133714_users.sql  20240817015825_pack-of-the-day.sql  20240901225747_rls.sql  20240902004945_improve-bird-views.sql  20240902200150_improve-link-tables.sql
test/: crashlytics_test.dart  smoke_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
