[workspace]
members = ["app", "data"]
default-members = ["app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Sam Tay <samctay@pm.me>"]
description = "birdtalk: an app to help you learn bird calls"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
dioxus = { version = "0.6.0-alpha.2", features = ["router"] }
dioxus-sdk = { git = "https://github.com/samtay/dioxus-sdk", branch = "0.6", features = [
  "storage",
] }
dioxus-logger = "0.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
dotenvy_macro = "0.15.7"
