[package]
name = "birdtalk-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-std = { version = "1.12.0", optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
dioxus = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true }
dotenvy_macro = "0.15.7"
gloo-net = { version = "0.5.0", features = ["json"] }
once_cell = "1.19.0"
postgrest = "1.6.0"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { workspace = true }
serde-querystring = "0.2.1"
serde_json = { workspace = true }
thiserror = "1.0.61"
tracing = { workspace = true }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
  "Element",
  "HtmlElement",
  "HtmlAudioElement",
] }

# can't seem to customize these enough
# dioxus-free-icons = { version = "0.8.5", features = ["hero-icons-outline"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }

[features]
default = []                                     # "fullstack"
server = ["dioxus/axum"]
static-generation = ["dioxus/static-generation"]
web = ["dioxus/web", "dep:async-std"]
fullstack = ["dioxus/fullstack"]
