[package]
name = "birdtalk-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
futures = "0.3.30"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
