[package]
name = "birdtalk-data"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = "0.3.30"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
